oauth/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: auth-provider
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccount: auth-service
      containers:
      - name: oauth-proxy
        image: oauth-proxy
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8180
          name: public
        args:
        - --http-address=:8180
        - --provider=openshift
        # using ^ SA as client as oauth client
        - --openshift-service-account=auth-service
        - --upstream=http://localhost:5678
        - --cookie-expire=23h0m0s
        - --cookie-secret-file=/etc/cookie/secret
        - --pass-access-token
        - --tls-cert=/etc/tls/private/tls.crt
        - --tls-key=/etc/tls/private/tls.key
        volumeMounts:
          - name: tls
            mountPath: /etc/tls/private
          - name: cookie
            mountPath: /etc/cookie            
      - name: http-https-echo
        image: http-https-echo
        imagePullPolicy: IfNotPresent
        ports:
          - name: echo-port
            containerPort: 5678
      volumes:
        - name: tls
          secret:
            secretName: self-signed-cert
        - name: cookie
          secret:
            secretName: cookie
