oauth/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: ext-auth
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: proxy-tls
spec:
  ports:
  - name: proxy
    port: 80
    targetPort: 8180
  selector:
    app: proxy
