oauth/base/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: auth-gateway
  namespace: ext-auth # TODO: can we refer to variables/templating for kustomize to reduce repetition
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      name: http
      number: 80
      protocol: HTTP
    # tls:
    #   credentialName: odh-dashboard-credential # must be the same as secret
    #   mode: SIMPLE
