oauth/base/routes.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: oauth-client
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: auth-service
    weight: 100
